2.0 Major version bump
-----------------------

Fixed a bug on V2 CHAD construction, affects absolute colorimetric intent
Fixed a bug that prevented linkicc to work
Fixed a bug on transicc that made profiles with output colorants info to malfunction
Fixed a bug on Lab + Alpha float formatters, added such predefined formatters as well
Added cmsChangeBufferFormat for backwards compatibility
Added UTILS_UNUSED_PARAMETER for samples
Added a check on jpgicc for NULL transforms
Fixed VC2010, VC2008 projects
Added cmsTagLinkedTo
Fixed some typos in error messages
Peliminary Delphi wrapper 
Fixed a bug in tificc in floating point formats
Fixed a bug in device link creation on v4 profiles
Fixed a bug in psid and profile sequence tags 
Fixed memory leaks on when recovering from errors
Fixed an issue on curve inversion
Fixed several integer overflow and other integrity checks, thanks to Chris Evans
linkicc now stores the rendering intent in the profile header
Fixed delphi interface
Added Duotone support (Bilinear interpolation)
Fixed a bug on curve reversing when source curves have few points
Added bound check in floating point interpolation

2.1 Maintenance release
-----------------------

Fixed severa bugs in absolute colorimetric intent
Removed pthreads need
Updated linkicc to 2.1, cleanup
Fixed some potential issues as NULL dereferencing
Fixed GBD bug (out of bounds memory overwrite) 
changed memmove to memcpy in cache for xput improvement 
Profiles with weird curves are not prone to p`relinearization optimization.
Added functions to retrieve formatters from transforms
Fixed a bug that made crash black preservation on CMYK2CMYK devicelinks
Added named color functionality 